2020-05-30 Franz Holzinger  <franz@ttproducts.de>
    * replace the documentation in the outdated sxw format manual.sxw by the manual.odt in the Open Document Format.

2020-05-09 Franz Holzinger  <franz@ttproducts.de>
    * support for TYPO3 9.x
    * several PHP bug fixes

2020-02-18 Franz Holzinger  <franz@ttproducts.de>
    * bugfix: Error in the check if a field has already been added to the $TCA by another extension

2019-07-27 Franz Holzinger  <franz@ttproducts.de>
    * bugfix: Non-static method JambageCom\Agency\Api\System::login

2019-04-12 Franz Holzinger  <franz@ttproducts.de>
    * new feature: support for recursive page ids to have the front end users in underlying sysfolders.

2019-02-11 Franz Holzinger  <franz@ttproducts.de>
    * bugfix: add missing parameter errorCode to the render methods of DeleteView and EditView.
    * bugfix: use flexform_ds_pi.xml and not flexform_ds_pi.xlf

2019-02-09 Franz Holzinger  <franz@ttproducts.de>
    * bugfix for PHP 7.2: replace the preview mode constants MODE_PREVIEW and MODE_NORMAL with namespace constants \JambageCom\Agency\Constants\Mode PREVIEW and NORMAL
    * bugfix to the responsive template file: the TermsAcknowledged parts have been missing for the CREATE, INVITE and EDIT subparts.

2019-02-06 Franz Holzinger  <franz@ttproducts.de>
    * bugfix to Localization

2019-02-06 Franz Holzinger  <franz@ttproducts.de>
    * new base class: change the Localization class from \JambageCom\Div2007\Base\LocalisationBase to TranslationBase. Change the methods of the $languageObj object accordingly: loadLL => loadLocalLang, getLLkey => getLocalLangKey, getLL => getLabel

2018-11-26 Franz Holzinger  <franz@ttproducts.de>
    * Extract file tt_content.php from ext_tables.php

2018-11-24 Franz Holzinger  <franz@ttproducts.de>
    * Readd file class.tx_agency.php which is needed until TYPO3 7.6 for addPItoST43.

2018-11-13 Franz Holzinger  <franz@ttproducts.de>
    * Fix PHP syntax error
