@@ -833,7 +833,7 @@
 <!-- ###SUB_INCLUDED_FIELD_date_of_birth### -->
     <div class="viewLabelValue formRowDateOfBirth">
         <div class="viewLabel divLabelDateOfBirth">
-            <label class="labelStatus">###LABEL_DATE_OF_BIRTH###</label>
+            <label class="labelDateOfBirth">###LABEL_DATE_OF_BIRTH###</label>
         </div>
         <div class="formValue divValueDateOfBirth">
             ###FIELD_date_of_birth###
@@ -844,7 +844,7 @@
 <!-- ###SUB_INCLUDED_FIELD_title### -->
     <div class="viewLabelValue formRowTitle">
         <div class="viewLabel divLabelTitle">
-            <label class="labelStatus">###LABEL_TITLE###</label>
+            <label class="labelTitle">###LABEL_TITLE###</label>
         </div>
         <div class="formValue divValueTitle">
             ###FIELD_title###
@@ -855,7 +855,7 @@
 <!-- ###SUB_INCLUDED_FIELD_company### -->
     <div class="viewLabelValue formRowCompany">
         <div class="viewLabel divLabelCompany">
-            <label class="labelStatus">###LABEL_COMPANY###</label>
+            <label class="labelCompany">###LABEL_COMPANY###</label>
         </div>
         <div class="formValue divValueCompany">
             ###FIELD_company###
@@ -866,7 +866,7 @@
 <!-- ###SUB_INCLUDED_FIELD_address### -->
     <div class="viewLabelValue formRowCompany">
         <div class="viewLabel divLabelCompany">
-            <label class="labelStatus">###LABEL_ADDRESS###</label>
+            <label class="labelValueCompany">###LABEL_ADDRESS###</label>
         </div>
         <div class="formValue divValueCompany">
             ###FIELD_address###
@@ -1985,7 +1985,7 @@ The user is informed that a message has been sent to his email address and that 
 <!-- ###SUB_INCLUDED_FIELD_date_of_birth### -->
     <div class="viewLabelInput formRowDateOfBirth">
         <div class="viewLabel divLabelDateOfBirth">
-            <label class="labelStatus">###LABEL_DATE_OF_BIRTH###</label>
+            <label class="labelDateOfBirth">###LABEL_DATE_OF_BIRTH###</label>
         </div>
         <div class="formValue divValueDateOfBirth">
             ###FIELD_date_of_birth###
@@ -1996,7 +1996,7 @@ The user is informed that a message has been sent to his email address and that 
 <!-- ###SUB_INCLUDED_FIELD_title### -->
     <div class="viewLabelInput formRowTitle">
         <div class="viewLabel divLabelTitle">
-            <label class="labelStatus">###LABEL_TITLE###</label>
+            <label class="labelTitle">###LABEL_TITLE###</label>
         </div>
         <div class="formValue divValueTitle">
             ###FIELD_title###
@@ -2007,7 +2007,7 @@ The user is informed that a message has been sent to his email address and that 
 <!-- ###SUB_INCLUDED_FIELD_company### -->
     <div class="viewLabelInput formRowCompany">
         <div class="viewLabel divLabelCompany">
-            <label class="labelStatus">###LABEL_COMPANY###</label>
+            <label class="labelCompany">###LABEL_COMPANY###</label>
         </div>
         <div class="formValue divValueCompany">
             ###FIELD_company###
@@ -2018,7 +2018,7 @@ The user is informed that a message has been sent to his email address and that 
 <!-- ###SUB_INCLUDED_FIELD_address### -->
     <div class="viewLabelInput formRowAddress">
         <div class="viewLabel divLabelAddress">
-            <label class="labelStatus">###LABEL_ADDRESS###</label>
+            <label class="labelAddress">###LABEL_ADDRESS###</label>
         </div>
         <div class="formValue divValueAddress">
             ###FIELD_address###
@@ -3032,7 +3032,7 @@ The user is informed that a message has been sent to the email address and that 
 <!-- ###SUB_INCLUDED_FIELD_date_of_birth### -->
     <div class="viewLabelValue formRowDateOfBirth">
         <div class="viewLabel divLabelDateOfBirth">
-            <label class="labelStatus">###LABEL_DATE_OF_BIRTH###</label>
+            <label class="labelDateOfBirth">###LABEL_DATE_OF_BIRTH###</label>
         </div>
         <div class="formValue divValueDateOfBirth">
             ###FIELD_date_of_birth###
@@ -3043,7 +3043,7 @@ The user is informed that a message has been sent to the email address and that 
 <!-- ###SUB_INCLUDED_FIELD_title### -->
     <div class="viewLabelValue formRowTitle">
         <div class="viewLabel divLabelTitle">
-            <label class="labelStatus">###LABEL_TITLE###</label>
+            <label class="labelTitle">###LABEL_TITLE###</label>
         </div>
         <div class="formValue divValueTitle">
             ###FIELD_title###
@@ -3054,7 +3054,7 @@ The user is informed that a message has been sent to the email address and that 
 <!-- ###SUB_INCLUDED_FIELD_company### -->
     <div class="viewLabelValue formRowCompany">
         <div class="viewLabel divLabelCompany">
-            <label class="labelStatus">###LABEL_COMPANY###</label>
+            <label class="labelCompany">###LABEL_COMPANY###</label>
         </div>
         <div class="formValue divValueCompany">
             ###FIELD_company###
@@ -3065,7 +3065,7 @@ The user is informed that a message has been sent to the email address and that 
 <!-- ###SUB_INCLUDED_FIELD_address### -->
     <div class="viewLabelValue formRowAddress">
         <div class="viewLabel divLabelAddress">
-            <label class="labelStatus">###LABEL_ADDRESS###</label>
+            <label class="labelAddress">###LABEL_ADDRESS###</label>
         </div>
         <div class="formValue divValueAddress">
             ###FIELD_address###
